--- a/client/src/App/index.tsx.css
+++ b/client/src/App/index.tsx.css
@@ -4,6 +4,7 @@
     text-align: center;
     margin: 0;
     padding: 0;
+    max-width: 100vw;
 }
 
 .logo-box {
@@ -47,6 +48,7 @@ h5 {
 .top-section {
     padding: 0 0 10px 0;
     background-color: #1e1e1e;
+    max-width:100vw;
 }
 
 .zmanim-section {
