--- a/client/src/components/SingleZman/index.tsx.css
+++ b/client/src/components/SingleZman/index.tsx.css
@@ -6,8 +6,9 @@
     align-items: center;
     border-radius: 7px;
     padding: 12px 20px;
-    min-width:500px;
-    min-height:90px;
+    width: min(75vw, 500px);
+    min-height: 90px;
+    max-width: 100vw;
     margin: 5px;
 }
 .zman-time-text {
