--- a/zman-clock/src/App/index.tsx.css
+++ b/zman-clock/src/App/index.tsx.css
@@ -7,18 +7,14 @@
     max-width: 100vw;
 }
 
-.logo-box {
-    position: relative;
-    height: 9em;
-}
-
-.logo {
+.basad {
+    font-size: 7pt;
+    font-weight:bold;
+    letter-spacing:3px;
+    color: #333;
     position: absolute;
-    left: calc(50% - 4.5em);
-    height: 6em;
-    padding: 1.5em;
-    will-change: filter;
-    transition: filter 300ms;
+    right: 2px;
+    top: 0px;
 }
 
 .app {
