--- a/zman-clock/src/App/index.tsx.css
+++ b/zman-clock/src/App/index.tsx.css
@@ -9,8 +9,8 @@
 
 .basad {
     font-size: 7pt;
-    font-weight:bold;
-    letter-spacing:3px;
+    font-weight: bold;
+    letter-spacing: 3px;
     color: #333;
     position: absolute;
     right: 2px;
@@ -44,7 +44,7 @@ h5 {
 .top-section {
     padding: 0 0 10px 0;
     background-color: #1e1e1e;
-    max-width:100vw;
+    max-width: 100vw;
 }
 
 .zmanim-section {
@@ -53,7 +53,7 @@ h5 {
     align-items: center;
     justify-content: space-around;
     flex: 1;
-    padding-top:10px;
+    padding-top: 10px;
 }
 
 .day-notes-view {
@@ -63,7 +63,7 @@ h5 {
 
 .day-notes-inner-view {
     justify-content: center;
-    gap:4vw;
+    gap: 4vw;
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
@@ -73,7 +73,7 @@ h5 {
 .day-notes-text {
     color: #7777aa;
     font-weight: bold;
-    font-size: 14px;
+    font-size:min(14px, 4vw);
     line-height: 27px;
     padding-right: 8px;
     padding-left: 8px;
@@ -91,7 +91,7 @@ h5 {
 .tefillah-notes-inner-view {
     display: flex;
     justify-content: center;
-    gap:2vw;
+    gap: 2vw;
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
@@ -111,25 +111,20 @@ h5 {
 
 .date-text {
     color: #bb8888;
-    font-size: 25px;
+    font-size: min(25px, 5vw);
     text-align: center;
 }
 
 .s-date-text {
     color: #876;
-    font-size: 15px;
+    font-size: min(18px, 4vw);
     text-align: center;
 }
 
 .time-text {
     color: #559955;
-    font-size: 80px;
+    font-size: min(15vw, 80px);
     padding: 1px;
-}
-
-.time-text-eng {
-    color: #559955;
-    font-size: 60px;
 }
 
 .time-now-text {
