--- a/zman-clock/src/App/index.tsx.css
+++ b/zman-clock/src/App/index.tsx.css
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
     max-width: 100vw;
+    height: 100vh;
 }
 
 .basad {
@@ -23,6 +24,18 @@
     width: 100%;
     padding: 0;
     margin: 0;
+    font-family: Rubik, "Noto Sans", system-ui, Helvetica, Arial, sans-serif;
+}
+
+.app-eng {
+    direction: ltr;
+    letter-spacing: 1px;
+}
+
+.app-heb {
+    direction: rtl;
+    font-family: Rubik, "Noto Sans", system-ui, Helvetica, Arial, sans-serif;
+    letter-spacing: 2px;
 }
 
 h2,
@@ -51,9 +64,10 @@ h5 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-start;
     flex: 1;
     padding-top: 10px;
+    background-color: #242424;
 }
 
 .day-notes-view {
@@ -73,7 +87,7 @@ h5 {
 .day-notes-text {
     color: #7777aa;
     font-weight: bold;
-    font-size:min(14px, 4vw);
+    font-size: min(14px, 4vw);
     line-height: 27px;
     padding-right: 8px;
     padding-left: 8px;
@@ -125,6 +139,7 @@ h5 {
     color: #559955;
     font-size: min(15vw, 80px);
     padding: 1px;
+    letter-spacing: 5px;
 }
 
 .time-now-text {
