--- a/zman-clock/src/components/SingleZman/index.tsx.css
+++ b/zman-clock/src/components/SingleZman/index.tsx.css
@@ -24,23 +24,25 @@
     text-align: center;
 }
 .time-remaining-text-eng {
-    font-size: min(30px, 5vw);
+    font-size: min(30px, 4.5vw);
     text-align: center;
 }
 .time-remaining-number {
     color: #ffffee;
     font-size: min(20px, 4vw);
+    padding-right:5px;
 }
 .time-remaining-number-eng {
     color: #ffffee;
     font-size: min(17px, 4vw);
+    padding-right:5px;
 }
 .time-remaining-label {
-    font-size: min(18px, 4vw);
+    font-size: min(20px, 4vw);
     font-weight: bold;
 }
 .time-remaining-label-eng {
-    font-size: min(15px, 4vw);
+    font-size: min(17px, 4vw);
     font-weight: bold;
 }
 .zman-type-name-text {
